Actualizacion del Apartado seguimiento, correccion de errores